fix(Console): wrap long headers in runtime logs message tabs
(cherry picked from commit aa74fb9a2bc2e4b8d273a9574e17d0876c7bf61f)

--- a/gravitee-apim-console-webui/src/management/api/api-traffic-v4/runtime-logs-details/components/runtime-logs-messages/components/api-runtime-logs-message-item/api-runtime-logs-message-item-content.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-traffic-v4/runtime-logs-details/components/runtime-logs-messages/components/api-runtime-logs-message-item/api-runtime-logs-message-item-content.component.scss
@@ -9,5 +9,6 @@ $typography: map.get(gio.$mat-theme, typography);
     background-color: mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'default');
     padding: 12px 16px;
     white-space: pre-wrap;
+    word-break: break-all;
   }
 }
